hphp/hack/test/pocket_universes/typing/decl3.bad.php.exp
File "decl3.bad.php", line 11, characters 7-7:
Wrong type hint (Typing[4350])
File "decl3.bad.php", line 9, characters 10-12:
Expected `int`
File "decl3.bad.php", line 11, characters 11-17:
But got `string`
